tests/errors/error_type_mismatch.wyn
fn main() {
    // Test basic type mismatch
    let x: int = "hello";  // string to int
    
    // Test function argument type mismatch
    let y: float = 3.14;
    print_int(y);  // float to int
    
    // Test array type mismatch
    let arr: [int] = ["a", "b", "c"];  // string array to int array
    
    // Test struct field type mismatch
    struct Person {
        name: string,
        age: int
    }
    
    let p = Person {
        name: 42,      // int to string
        age: "twenty"  // string to int
    };
    
    // Test return type mismatch
    return "error";  // string return in void function
}